# autospace2

./: CMakeLists.txt  README.md  pyproject.toml
auto2/: __init__.py  norms_ends.txt
src/: AutoModule.cpp  AutoModule.h  AutoSpace.cpp  AutoSpace.h  main.cpp  utils.cpp  utils.h
